--- a/nagaumesh_portfolio/src/data/projects.json
+++ b/nagaumesh_portfolio/src/data/projects.json
@@ -5,7 +5,7 @@
     "description": " Developing and deploying a interactive portfolio website ",
     "skills": ["HTML", "CSS", "React"],
     "demo": "https://www.example.com",
-    "source": "https://www.github.com"
+    "source": "https://github.com/Nagaumesh/Portfolio/tree/main/nagaumesh_portfolio"
   },
   {
     "title": " Facial Recognition and Database Integration",
@@ -13,6 +13,6 @@
     "description": " Hands-on exploration featuring through Python and Firebase.",
     "skills": ["Python", "Firebase"],
     "demo": "https://www.example.com",
-    "source": "https://www.github.com"
+    "source": "https://github.com/Nagaumesh/FaceRecognition"
   }
 ]
