--- a/nagaumesh_portfolio/src/data/projects.json
+++ b/nagaumesh_portfolio/src/data/projects.json
@@ -12,7 +12,7 @@
     "imageSrc": "projects/facerecognition.gif",
     "description": " Hands-on exploration featuring through Python and Firebase.",
     "skills": ["Python", "Firebase"],
-    "demo": "https://www.example.com",
+    "demo": "https://www.youtube.com/watch?v=JE2zZ_mQyf4",
     "source": "https://github.com/Nagaumesh/FaceRecognition"
   }
 ]
