--- a/nagaumesh_portfolio/src/data/projects.json
+++ b/nagaumesh_portfolio/src/data/projects.json
@@ -8,19 +8,20 @@
     "source": "https://github.com/Nagaumesh/Portfolio/tree/main/nagaumesh_portfolio"
   },
   {
+    "title": "Youtube-clone (API)",
+    "imageSrc": "projects/yt.gif",
+    "description": "which enables users to browse, search, and interact with YouTube-like functionalities seamlessly.",
+    "skills": ["React", "RapidApi","HTML","CSS"],
+    "demo": "https://umeshvision.netlify.app/",
+    "source": "https://github.com/Nagaumesh/yt_clone"
+  },
+  {
     "title": " Facial Recognition and Database Integration",
     "imageSrc": "projects/facerecognition.gif",
     "description": " Hands-on exploration featuring through Python and Firebase.",
     "skills": ["Python", "Firebase"],
     "demo": "https://www.youtube.com/watch?v=JE2zZ_mQyf4",
     "source": "https://github.com/Nagaumesh/FaceRecognition"
-  },
-  {
-    "title": "Youtube-clone (API)",
-    "imageSrc": "projects/yt.gif",
-    "description": "which enables users to browse, search, and interact with YouTube-like functionalities seamlessly.",
-    "skills": ["React", "RapidApi","HTML","CSS"],
-    "demo": "https://www.youtube.com/watch?v=JE2zZ_mQyf4",
-    "source": "https://github.com/Nagaumesh/FaceRecognition"
+    
   }
 ]
